app/assets/stylesheets/molecules/_form-molecules.scss
.input-group--block {
  .radio-button, .checkbox {
      display: block;
      width: 100%;
      max-width: $width-form-long;
  }
}

.input-group--inline {
  display: block;
  @include clearfix();
    .radio-button, .checkbox {
        display: inline-block;
        margin-right: .3em;
    }
    .select {
        display: inline-block;
        margin-right: .5em;
    }
    margin-bottom: .5em;
}

.input-group--two-up {
    @include clearfix();
    .radio-button, .checkbox {
        display: block;
        float: left;
        width: 100%;
        max-width: $width-form-med;
        margin-right: .5em;
    }
    margin-bottom: .5em;
}

.input-group--image {
  .radio-button {
    padding: .5em;
  }

  input {
    display: none;
  }
}

.input-group--range {
  @include clearfix();
  display: block;
  margin-bottom: .5em;

  .form-group {
    display: inline-block;
    margin-bottom: 0;
  }

  .range-text {
    margin: 0 1em;
  }
}

.text-input-group {
    @include outline-within;
    display: table;
    margin-bottom: 0;
    border-collapse: separate;
    width: 100%;
    border: 2px solid $color-grey-darkest;

    .text-input-group__prefix {
        display: table-cell;
        width: 1%;
        font-weight: $font-weight-bold;
        padding: 0 $s10 0 $s25;
        vertical-align: middle;
        background-color: $color-grey-light;
        box-shadow: inset 0px 2px 0px rgba(#000, .15);
    }
    .text-input {
        display: table-cell;
        margin-bottom: 0;
        vertical-align: middle;
        margin-top: 0;
        background-color: $color-grey-light;
        border: none;
        padding: 0;
        &:focus {
          outline: none;
          box-shadow: inset 0px 2px 0px rgba(#000, .15);
        }
    }
    .text-input-group__postfix {
        display: table-cell;
        width: 1%;
        font-weight: $font-weight-bold;
        padding: 0 $s25 0 $s10;
        vertical-align: middle;
        background-color: $color-grey-light;
        box-shadow: inset 0px 2px 0px rgba(#000, .15);
    }
}

.form-group {
    margin-bottom: $s60;
    position: relative;
    .form-question + .text--help, .form-question + .text--small {
        margin-top: -$s25;
        margin-bottom: $s25;
    }

    .form-group + .text-input, .form-group + .text-input-group {
      margin-bottom: $s25;
    }
}

.form-group--error {
  margin: {
    left: -$s25;
    right: -$s25;
  }

  padding: {
    left: $s25;
    right: $s25;
  }

  @include media($tablet-up) {
    margin: {
      left: -$s35;
      right: -$s35;
    }

    padding: {
      left: $s35;
      right: $s35;
    }
  }
  
  &:before {
    content: '';
    display: block;
    position: absolute;
    top: -$s10;
    bottom: -$s10;
    left: 0;
    width: $s5;
    background-color: $color-red;
  }

  .text--error {
    display: block;
    margin-top: $s25;
  }

}

.select-with-button {
  .select {
    display: block;
    border-radius: $border-radius;
    &:before {
      border: 1px solid #fff;
      border-top-right-radius: $border-radius;
      border-bottom-right-radius: $border-radius;
      background-color: #fff;
    }

    @include media($tablet-up) {
      display: inline-block;
      margin-right: -.2em;
      z-index: 0;
      &:before {
        border-radius: 0;
      }
    }
  }

  .select__element {
    width: 100%;
    font-size: $font-size-25;
    border: 2px solid $color-grey;

    &:focus {
      border-color: $color-teal;
    }

    @include media($tablet-up) {
      min-width: 17em;
      border-right: 0;
    }
  }

  .select__button {
    border-width: 2px;
    box-shadow: none;
    @include media($tablet-up) {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }
}

.question-with-follow-up {
  margin-bottom: $s60;
}

.question-with-follow-up__question {
  .form-group {
    margin-bottom: $s15;
  }
}

.question-with-follow-up__follow-up {
    display: none;
    margin: {
      left: -$s25;
      right: -$s25;
    }

    padding: {
      left: $s25;
      right: $s25;
    }

    @include media($tablet-up) {
      margin: {
        left: -$s35;
        right: -$s35;
      }

      padding: {
        left: $s35;
        right: $s35;
      }
    }
    position: relative;
    background-color: $color-background;
    border-top: 2px solid $color-grey-darkest;
    border-bottom: 2px solid $color-grey-darkest;
    padding: {
        top: $s35;
        bottom: $s35;
    }

    .form-group:last-of-type {
      margin-bottom: 0;
    }

    .text-input {
      background-color: white;
    }


    &:before {
        @include triangle(top, $color: $color-grey-darkest, $size: 12px);
        content: '';
        display: block;
        position: absolute;
        top: -19px;
        left: $s15+2rem;
        @include media($tablet-up) {
            left: $s35+2rem;
        }
    }

    &:after {
        @include triangle(top, $color: $color-background, $size: 10px);
        content: '';
        display: block;
        position: absolute;
        top: -15px;
        left: $s15+2.2rem;
        @include media($tablet-up) {
            left: $s35+2.2rem;
        }
    }
}

.question-with-follow-up__follow-up--show-by-default {
  display: block;
}

.feedback-survey__form {
  .form-group {
    margin-bottom: 1em;
  }

  .radio-button input {
    display: none;
  }
}

#interview-yes-follow-up {
  .radio-button input {
    display: none;
  }
}

